@@ -40,7 +40,7 @@ setup(
     version='0.3',
     url='http://packages.python.org/sphinxcontrib-aafig/',
     download_url='http://pypi.python.org/pypi/sphinxcontrib-aafig',
-    license='BSD',
+    license='BOLA',
     author='Leandro Lucarella',
     author_email='llucax@gmail.com',
     description='aafig Sphinx extension',
@@ -51,7 +51,7 @@ setup(
         'Environment :: Console',
         'Environment :: Web Environment',
         'Intended Audience :: Developers',
-        'License :: OSI Approved :: BSD License',
+        'License :: Public Domain',
         'Operating System :: OS Independent',
         'Programming Language :: Python',
         'Topic :: Documentation',
